<resources>
    <string name="app_name">SocalNetwork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="titleMessageHint">Title Message</string>
    <string name="textMessageHint">Text Message</string>
    <string name="globalSpamWindow">Global Spam</string>
    <string name="sendSpamButton">Send spam</string>
    <string name="allSocial">All socials</string>
    <string name="fbSocial">Facebook</string>
    <string name="googleSocial">Google+</string>
    <string name="vkSocial">VK</string>
    <string name="profile">Profile</string>
    <integer name="com_vk_sdk_AppId">5746309</integer>
    <string name="twitter_consumer_key">sbQE3TBromOxWirLQUxWkUQj7</string>
    <string name="twitter_consumer_secret">qyxoh7mtqDiN62KdB5TKcEcQa5d60x8yytCTckZnG7kX0NkZbc</string>
    <string name="facebook_app_id">556351057897480</string>
    <string name="server_client_id">806305819002-4lahnm41afllsvun86mhs3pv2493skdp.apps.googleusercontent.com</string>
    <string name="login">Log in</string>
    <string name="singup">SIGN UP</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="comfirmpassword">Comfirm Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="location">Location</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="okMenuButton">OK</string>
    <string name="log_in_with_vk">Log in with VK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="login_activity_label">or Sing Up with</string>

</resources>
