<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jdroidcoder.ua.socalnetwork.MessageActivity">

    <EditText
        android:id="@+id/titleMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleMessageHint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/textMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleMessageEditText"
        android:layout_marginTop="6dp"
        android:hint="@string/textMessageHint"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/socialContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textMessageEditText"
        android:layout_centerHorizontal="true">

        <CheckBox
            android:id="@+id/allSocials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allSocial" />

        <CheckBox
            android:id="@+id/fbSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fbSocial" />

        <CheckBox
            android:id="@+id/googleSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/googleSocial" />

        <CheckBox
            android:id="@+id/vkSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vkSocial" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/socialContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/send_spam_button_style"
        android:text="@string/sendSpamButton"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</RelativeLayout>
