<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.activities.AuthorizationActivity">


    <EditText
        android:id="@+id/emailOrNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailOrNumberEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="16dp" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/login_activity_label"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orTextView"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/fbFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookLoginButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/fb_login"
                android:onClick="loginWithVkOnClickAction" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/vkLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@id/fbFrame"
            android:background="@mipmap/vk_login"
            android:onClick="loginWithVkOnClickAction" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordEditText"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:background="@drawable/send_spam_button_style"
            android:onClick="startRegistrationActivity"
            android:text="@string/singup"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@+id/signUpButton"
            android:background="@drawable/send_spam_button_style"
            android:onClick="logInButtonAction"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</RelativeLayout>